--- a/index.html
+++ b/index.html
@@ -93,19 +93,19 @@
       <!-- Slides -->
       <div class="slides">
         <div class="slide active">
-          <img src="images/banner_02.png" alt="Manifestações nas ruas" loading="lazy">
+          <img src="banner_02.png" alt="Manifestações nas ruas" loading="lazy">
           <div class="slide-title">
             <h2>Donald Trump toma posse como presidente dos Estados Unidos</h2>
           </div>
         </div>
         <div class="slide">
-          <img src="images/banner_01.png" alt="Economia em destaque" loading="lazy">
+          <img src="banner_01.png" alt="Economia em destaque" loading="lazy">
           <div class="slide-title">
             <h2>Zenit se antecipa ao Botafogo e anuncia pacotão de negociações</h2>
           </div>
         </div>
         <div class="slide">
-          <img src="images/banner_03.png" alt="Novidades em tecnologia" loading="lazy">
+          <img src="banner_03.png" alt="Novidades em tecnologia" loading="lazy">
           <div class="slide-title">
             <h2>Bolsonaro diz que “pode fugir” do Brasil mesmo sem passaporte</h2>
           </div>
